<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100"
    tools:context="com.pinaksoftwares.fragmenttransaction.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_weight="30"
        android:orientation="vertical"
        android:weightSum="100">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="33"
            android:orientation="horizontal"
            android:weightSum="100">

            <Button
                android:id="@+id/btn_add_a"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="30"
                android:onClick="addA"
                android:text="@string/add_a"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btn_remove_a"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="30"
                android:onClick="removeA"
                android:text="@string/attach_a"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btn_replace_a_with_b"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="40"
                android:onClick="replaceAwithB"
                android:text="@string/replace_a_with_b"
                android:textAllCaps="false" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="33"
            android:orientation="horizontal"
            android:weightSum="100">

            <Button
                android:id="@+id/btn_add_b"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="30"
                android:onClick="addB"
                android:text="@string/add_b"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btn_remove_b"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="30"
                android:onClick="removeB"
                android:text="@string/attach_b"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btn_replace_b_with_a"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="40"
                android:onClick="replaceBwithA"
                android:text="@string/replace_b_with_a"
                android:textAllCaps="false" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="34"
            android:orientation="horizontal"
            android:weightSum="100">


            <Button
                android:id="@+id/btn_attach_a"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="50"
                android:onClick="attachA"
                android:text="@string/detach_a"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btn_detach_b"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="50"
                android:onClick="detachA"
                android:text="@string/detach_b"
                android:textAllCaps="false" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/group"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="5dp"
        android:layout_weight="70"
        android:orientation="horizontal">

    </LinearLayout>


</LinearLayout>
